# matrix_reduction

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  chunk_reduction_algorithm.cpp  chunk_reduction_algorithm.cu  chunk_reduction_algorithm.h  gpu_boundary_matrix.cpp  gpu_boundary_matrix.cu  gpu_boundary_matrix.h  gpu_common.cpp  gpu_common.h  gpu_spectral_sequence_reduction.cpp  gpu_spectral_sequence_reduction.cu  high_genus_result.txt  matReduct_debug  matrix_operations.h  phat_high_genus_result.txt  phat_result.txt  result.txt  tags  test.cpp  test.cu  updata.sh
alex_codes/examples/: four_triangles_good.txt  second_attempt.txt  test_out_1.txt
alex_codes/mat_red/: Makefile  gpu_boundary_matrix.cu  gpu_boundary_matrix.h  gpu_common.cu  gpu_common.h  gpu_spectral_sequence_reduction.cu  main.cu  matReduct_debug  parrallel_reduction.cu  result.txt  test.cu
alex_codes/phat_cuda/: Makefile  gpu_bits64_solver.cu  gpu_bits64_solver.h  gpu_chunk_reduction.cu  gpu_chunk_reduction.h  gpu_common.cu  gpu_common.h  gpu_matrix.cu  gpu_matrix.h  main.cu  move_to_left.sh
alex_codes/test/: a.out  test.cu
examples/: test.txt  test_out.txt
examples/four_triangles/: 1D.txt  2D.txt
examples/herber/: 1D.txt  3D.txt
examples/second_attempt-Copy/: 1D.txt  3D.txt
examples/test1/: 2D - test insertion sort.txt  readme.txt
phat_lib/: boundary_matrix_tants.h  persistence_pairs.h
phat_lib/algorithms/: row_reduction.h  spectral_sequence_reduction.h
phat_lib/helpers/: dualize.h  thread_local_storage.h
phat_lib/representations/: abstract_pivot_column.h  heap_pivot_column.h  (+1 more)
(+33 files in other folders)
